# -KEPLER-AI-

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  =1.2.0  Makefile  README.md  TODO.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: README.md
data/engineered/: test_engineered.csv  val_engineered.csv
data/scaled/: test_scaled.csv  val_scaled.csv
data/selected/: selected_features.txt  test_selected.csv  val_selected.csv
docs/: API.md  CONTRIBUTING.md  DATA_PIPELINE.md  DEPLOYMENT.md  DEVELOPMENT.md  FEATURES.md  TESTING.md
logs/analysis_v2/: analysis_report.txt  feature_importance_full.csv
models/: catboost_model_20251111_211339.pkl  metrics_20251111_211339.json
models/v1_baseline/: README.md  feature_importance_baseline.csv  metrics_baseline.json
models/v2_class_weights/: 1_baseline_no_weights.cbm  1_baseline_no_weights.json  1_baseline_no_weights.pkl  2_balanced_auto.pkl  3_manual_conservative.pkl  4_manual_aggressive.pkl  5_inverse_frequency.pkl  comparison_report.json  comparison_summary.txt
models/v2_final/: catboost_v2_final.cbm  catboost_v2_final.json  comparison_summary.txt
models/v3_smote/: 1_baseline_no_smote.pkl  2_smote_default_k=5.pkl  3_smote_conservative_k=3.pkl  4_smote_aggressive_k=7.pkl  5_smote_+_class_weights.pkl  comparison_report.json  comparison_summary.txt
notebooks/: 01_exploratory_data_analysis.ipynb  Untitled.ipynb
scripts/: README.md  analyze_model.py  analyze_model_v2.py  create_baseline_reference.py  download_nasa_data.py  engineer_features.py  fix_and_commit.sh  fix_precommit.sh  predict_v2.py  preprocess_data.py  scale_features.py  select_features.py  train_model.py  train_model_v2_class_weights.py  train_model_v3_smote.py  validate_model.py
src/core/: __init__.py  constants.py  exceptions.py  label_utils.py
src/data/: __init__.py  cleaners.py  preprocessors.py
src/evaluation/: __init__.py  metrics.py
src/features/: engineering.py  scalers.py  selection.py
src/models/: __init__.py  base.py  catboost_model.py  model_loader.py
tests/: conftest.py
tests/test_core/: test_constants.py  test_label_utils.py
tests/test_data/: test_cleaners.py  test_preprocessors.py
tests/test_evaluation/: test_metrics.py
tests/test_features/: test_engineering.py  test_scalers.py  test_selection.py
tests/test_integrations/: test_full_pipeline.py
tests/test_models/: test_model_loader.py  test_predictions.py
