# ===================================================================
# Proje Geliştirme, Paketleme ve Kalite Kontrol Merkezi
# ===================================================================

[build-system]
# Modern Python paketleri için standart build sistemi
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exoplanet-ml"
version = "0.1.0"
description = "NASA Kepler verilerini kullanarak ötegezegen tespiti için Makine Öğrenimi hattı"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    # Kendi adın ve e-postan ile güncelle
    {name = "ozturu68", email = "ozturu68@tutamail.com"}
]
keywords = ["machine-learning", "exoplanet", "nasa", "kepler", "astronomy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]

[project.urls]
# Projenin GitHub linkleri ile güncelle
Homepage = "https://github.com/ozturu68/kepler-new"
Repository = "https://github.com/ozturu68/kepler-new"
Documentation = "https://github.com/ozturu68/kepler-new" # veya MkDocs siten

# ===================================================================
# Kod Formatlama ve Sıralama Araçları (Black & isort)
# ===================================================================

[tool.black]
# Satır uzunluğu (flake8 ve pylint ile aynı olmalı)
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
# 'src' klasörünü ana kodun olarak tanımla
known_first_party = ["src"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ===================================================================
# Kod Denetleme (Linting) Araçları (flake8 & pylint)
# ARTIK MERKEZİLEŞTİRİLDİ
# ===================================================================

[tool.pylint.main]
# Satır uzunluğu (black ile aynı)
max-line-length = 100
# Test ve venv klasörlerini denetimden çıkar
ignore = ["tests", "venv"]
# Hata sembolleri yerine isimlerini kullan (daha okunaklı)
reports = "yes"
# Gereksiz "disable" yorumlarını bildir
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods (API/Schema sınıfları için yararlı)
    "W0511", # TODO/FIXME yorumlarına izin ver
    "R0801", # similar-lines (Testlerde sıkça olur)
]

# ===================================================================
# Güvenlik ve Tip Kontrolü (bandit & mypy)
# İYİLEŞTİRİLMİŞ AYARLAR
# ===================================================================

[tool.bandit]
# Güvenlik taraması 'scripts' klasörünü de içermeli
exclude_dirs = ["tests", "venv"]
# 'assert' kullanımına ve 'subprocess'a izin ver (dikkatli kullan)
skips = ["B101", "B601"]

[tool.mypy]
# KATILAŞTIRILMIŞ TİP KONTROLÜ
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

# Tüm fonksiyonların tip tanımlaması içermesini zorunlu kıl
disallow_untyped_defs = true
# None dönebilecek ama belirtilmemiş fonksiyonları bul
warn_no_return = true

# Tip tanımlaması olmayan kütüphaneleri yoksayma (daha güvenli)
# SADECE stubs'ı olmayan BİLDİĞİMİZ kütüphaneleri yoksay
[[tool.mypy.overrides]]
module = [
    "catboost.*",
    "lightgbm.*",
    "xgboost.*",
    "shap.*",
    "pandera.*",
    "scipy.*",
    "seaborn.*",
    "matplotlib.*",
    "loguru.*",
    "locust.*",
    "pytest.*",
    "requests.*",
    "tqdm.*",
    "joblib.*",
    "click.*",
    "uvicorn.*",
    "prometheus_client.*",
    "httpx.*",
    "imbalanced_learn.*"
]
ignore_missing_imports = true

# ===================================================================
# Test ve Kod Kapsamı (pytest & coverage)
# ===================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# FastAPI testleri için asyncio modunu otomatik yap
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    # Proje kalitesi için %80 kapsamı zorunlu tut
    "--cov-fail-under=80",
]
markers = [
    "slow: yavaş testleri işaretler",
    "integration: entegrasyon testlerini işaretler",
    "unit: birim testlerini işaretler",
    "e2e: uçtan uca testleri işaretler",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    # __init__.py dosyaları genellikle test edilmez
    "*/__init__.py",
    # API'nin ana başlangıç dosyası
    "src/api/main.py",
    # Streamlit'in ana başlangıç dosyası
    "src/webapp/app.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    # Standart hariç tutmalar
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    # Soyut (abstract) metodlar
    "@(abc\.)?abstractmethod",
]