# ===================================================================
# NASA Kepler Exoplanet Classification Project
# ===================================================================
# Project: Kepler Exoplanet ML Pipeline
# Author: sulegogh (ozturu68)
# Date: 2025-11-11
# Version: 2.0.0
# Python: >=3.10
# Status: Production-Ready
# ===================================================================

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

# ===================================================================
# PROJECT METADATA
# ===================================================================

[project]
name = "kepler-exoplanet-ml"
version = "2.0.0"
description = "Machine Learning pipeline for exoplanet detection using NASA Kepler data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "sulegogh", email = "ozturu68@tutamail.com"}
]
maintainers = [
    {name = "sulegogh", email = "ozturu68@tutamail.com"}
]
keywords = [
    "machine-learning",
    "exoplanet",
    "nasa",
    "kepler",
    "astronomy",
    "catboost",
    "classification",
    "imbalanced-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "catboost>=1.2.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "imbalanced-learn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-bugbear>=23.12.2",
    "flake8-comprehensions>=3.14.0",
    "flake8-simplify>=0.21.0",
    "pep8-naming>=0.13.3",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.2.0",
]

notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.21.0",
    "ipywidgets>=8.0.0",
    "nbformat>=5.7.0",
]

all = [
    "kepler-exoplanet-ml[dev,notebook]"
]

[project.urls]
Homepage = "https://github.com/ozturu68/-KEPLER-AI-"
Repository = "https://github.com/ozturu68/-KEPLER-AI-"
Issues = "https://github.com/ozturu68/-KEPLER-AI-/issues"
Documentation = "https://github.com/ozturu68/-KEPLER-AI-/blob/main/README.md"

# ===================================================================
# BLACK - Code Formatter
# ===================================================================

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | data
  | logs
  | models
  | catboost_info
)/
'''

# ===================================================================
# ISORT - Import Sorter
# ===================================================================

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [".git", ".mypy_cache", ".pytest_cache", ".tox", ".venv", "venv", "build", "dist"]

# ===================================================================
# MYPY - Type Checker
# ===================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
warn_no_return = false
warn_redundant_casts = false
warn_unused_ignores = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = false
show_error_codes = true
pretty = true
mypy_path = "src"
files = ["src"]
exclude = ["venv", ".venv", "build", "dist", "tests"]

[[tool.mypy.overrides]]
module = [
    "catboost.*",
    "sklearn.*",
    "imblearn.*",
    "seaborn.*",
    "matplotlib.*",
    "loguru.*",
    "tqdm.*",
]
ignore_missing_imports = true

# ===================================================================
# PYTEST - Testing
# ===================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short", "--cov=src", "--cov-report=term-missing", "--cov-report=html:htmlcov", "--maxfail=5"]
markers = ["slow: slow tests", "integration: integration tests", "unit: unit tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

# ===================================================================
# SETUPTOOLS
# ===================================================================

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["py.typed"]
